<resources>
    <string name="app_name">中爆终端控制器</string>
    <string name="device_type">型号:FB-L880</string>
    <string name="txt_current">电流:</string>
    <string name="txt_voltage">电压:</string>
    <string name="delay_scheme">延期方案</string>
    <string name="detonate_rec">爆破记录</string>
    <string name="txt_settings">本机设置</string>
    <string name="detonate_cooperate">联机爆破</string>
    <string name="detonate_ctrl">起爆控制</string>
    <string name="detonate_auth">离线授权</string>
    <string name="button_new_scheme">新建方案</string>
    <string name="button_add_detonator">扫描注册</string>
    <string name="button_check_schedule">修改延期</string>
    <string name="button_check_detonator">单发检测</string>
    <string name="add_detonator">扫描注册雷管</string>
    <string name="check_schedule">修改延期方案</string>
    <string name="check_locate">定位检测</string>
    <string name="single_check_detonator">单发雷管检测</string>
    <string name="check_detonator">在线雷管检测</string>
    <string name="error_detonator">错误雷管列表</string>
    <string name="title_activity_welcome">中爆终端控制器</string>
    <string name="title_props_settings">参数设置</string>
    <string name="hint_input_username">请输入用户名</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="txt_register_user">用户注册</string>
    <string name="txt_remember_pwd">记住密码</string>
    <string name="table_serial_no">序号</string>
    <string name="table_address">管壳码</string>
    <string name="table_delay">延期</string>
    <string name="table_row">排号</string>
    <string name="table_hole">孔号</string>
    <string name="table_inside">孔内</string>
    <string name="table_section">段号</string>
    <string name="table_section_inside">段内</string>
    <string name="table_version">版本号</string>
    <string name="table_size">大小</string>
    <string name="table_download_date">下载日期</string>
    <string name="table_scheme_name">项目名称</string>
    <string name="table_create_date">创建日期</string>
    <string name="hint_inputDelay">请输入延期</string>
    <string name="txt_row_delay">*.排间:</string>
    <string name="txt_inside_delay">#.孔内:</string>
    <string name="txt_hole_delay">0.孔间:</string>
    <string name="txt_section_delay">*.段间延期:</string>
    <string name="txt_section_inside_delay">#.段内延期:</string>
    <string name="section_delay">段间延期:</string>
    <string name="section_inside_delay">段内延期:</string>
    <string name="delay_unit">ms</string>
    <string name="insert_up">向上插入</string>
    <string name="insert_down">向下插入</string>
    <string name="register_line">注册雷管</string>
    <string name="scan_line">扫描雷管</string>
    <string name="manual_line">手动输入</string>
    <string name="txt_total_line">总数:</string>
    <string name="txt_total_delay">总时差:</string>
    <string name="detect_method">检测方式</string>
    <string name="detect_barcode_1">1.条码检测</string>
    <string name="detect_line_1">2.脚线检测</string>
    <string name="detect_barcode">条码检测</string>
    <string name="detect_line">脚线检测</string>
    <string name="table_project_name">项目名称</string>
    <string name="table_auth_date">授权时间</string>
    <string name="table_amount">数量</string>
    <string name="table_valid_date">有效期</string>
    <string name="auth_list">离线授权</string>
    <string name="detail_auth">授权列表明细</string>
    <string name="table_explode_date">爆破时间</string>
    <string name="table_uploaded">上传</string>
    <string name="detail_schedule">爆破记录明细</string>
    <string name="settings_wifi">无线网络</string>
    <string name="settings_bt">蓝牙</string>
    <string name="settings_bt_rescan">重新扫描</string>
    <string name="settings_bt_visible">可用网络</string>
    <string name="settings_display">显示设置</string>
    <string name="settings_sound">声音设置</string>
    <string name="settings_finger">指纹设置</string>
    <string name="settings_server">上报设置</string>
    <string name="settings_upgrade">在线更新</string>
    <string name="settings_enterprise">企业信息</string>
    <string name="settings_clear">清除数据</string>
    <string name="settings_info">系统信息</string>
    <string name="upgrade_version">版本管理</string>
    <string name="bai_se_detector">现场人员信息</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_exit">退出</string>
    <string name="btn_ignore">忽略</string>
    <string name="btn_cover">覆盖</string>
    <string name="btn_append">合并</string>
    <string name="display_light">亮度</string>
    <string name="display_auto_light">自动调节亮度</string>
    <string name="display_sleep_time">休眠时间</string>
    <string name="display_font_scale">字体大小</string>
    <string name="sound_volume">音量</string>
    <string name="sound_vibrate">振动</string>
    <string name="text_row_num">排号:</string>
    <string name="text_hole_num">孔号:</string>
    <string name="text_inside_num">孔内:</string>
    <string name="text_section_num">段号:</string>
    <string name="text_section_inside_num">段内:</string>
    <string name="text_current_delay">当前延期:</string>
    <string name="text_last_delay">上一发延期:</string>
    <string name="text_tube_num">管壳码:</string>
    <string name="text_time_count">时长:</string>
    <string name="hint_input_time">05</string>
    <string name="text_time_unit">分钟</string>
    <string name="hint_input_voltage_value">21.0</string>
    <string name="text_voltage_unit">V</string>
    <string name="progress_charging">正在充电，请稍候！</string>
    <string name="btn_continue">继续</string>
    <string name="used_time">总计用时:</string>
    <string name="delay_period">总延期:</string>
    <string name="check_auth">雷管授权验证</string>
    <string name="det_charge">正在充电</string>
    <string name="det_check">正在检测</string>
    <string name="det_slide">滑动起爆</string>
    <string name="write_number">设置雷管序列号</string>
    <string name="det_up_down_vol">升降法测试</string>
    <string name="det_capacity">电容测试</string>
    <string name="det_slide_hint">&gt;&gt;&gt;长按R键&gt;&gt;&gt;</string>
    <string name="det_slide_hold">保持3秒后再松手起爆</string>
    <string name="det_cancel_hint">&lt;&lt;&lt;松手起爆，向左滑动取消&lt;&lt;&lt;</string>
    <string name="det_slide_hold_key">保持R键并按住Boom键%1$d秒</string>
    <string name="det_cancel_key">同时松开双键起爆，松开单个键取消</string>
    <string name="start_explode">开始起爆</string>
    <string name="charge_progress">充电进度</string>
    <string name="check_progress">检测进度</string>
    <string name="explode_progress">起爆进度</string>
    <string name="progress_title">提示</string>
    <string name="progress_text">正在初始化模块，请稍候！</string>
    <string name="progress_set_delay">正在下载延期，请稍候！</string>
    <string name="progress_detect">正在检测，请稍候！</string>
    <string name="progress_reading">正在读取未注册雷管信息</string>
    <string name="progress_upload">正在上传，请稍候！</string>
    <string name="progress_connecting">正在连接设备，请稍候！</string>
    <string name="progress_total">总进度:%1$d%%</string>
    <string name="progress_explode">正在做起爆前检测工作，请稍候！</string>
    <string name="mode_open_air">露天</string>
    <string name="mode_tunnel">井巷</string>
    <string name="mode_wireless">远程</string>
    <string name="scheme_mode">多延期方案</string>
    <string name="semi_product_title">半成品检测</string>
    <string name="select_type">选择雷管类型:</string>
    <string name="code_text">当前管壳码:___________________</string>
    <string name="current_text">电流:________μA</string>
    <string name="voltage_text">电压:________V</string>
    <string name="normal_text">正常:________发</string>
    <string name="abnormal_text">异常:________发</string>
    <string name="camera_title">对准摄像头后点击屏幕</string>
    <string name="camera_not_installed">没有安装摄像头！</string>
    <string name="camera_open_fail">打开摄像头失败！</string>
    <string name="camera_permission">请允许摄像头权限！</string>
    <string name="camera_detecting">开始检测，请稍候！</string>
    <string name="camera_not_found">无授权用户！</string>
    <string name="camera_not_detected">检测不到人脸！</string>
    <string name="enterprise_code">单位代码:</string>
    <string name="enterprise_id">爆破员身份证号:</string>
    <string name="enterprise_commercial">是否营业性爆破单位:</string>
    <string name="enterprise_contract_code">合同编号:</string>
    <string name="enterprise_project_code">项目编号:</string>
    <string name="enterprise_not_null">* 必填</string>
    <string name="enterprise_hint">长度不能超过50位</string>
    <string name="enterprise_hint_id">18位，X用小数点代替</string>
    <string name="enterprise_type_project">项目</string>
    <string name="enterprise_type_contract">合同</string>
    <string name="enterprise_contract_name">合同名称:</string>
    <string name="enterprise_project_name">项目名称:</string>
    <string name="enterprise_exploder_name">爆破员姓名:</string>
    <string name="enterprise_name">爆破公司名称:</string>
    <string name="enterprise_detector_id">检测员身份证号:</string>
    <string name="offline_start">起始雷管:</string>
    <string name="offline_end">末端雷管:</string>
    <string name="offline_amount">数量:</string>
    <string name="offline_hint">管壳码长度13位</string>
    <string name="add_start">起始:</string>
    <string name="connect_status">连接状态:</string>
    <string name="unite_status">联机状态:</string>
    <string name="subtitle_unite">联机</string>
    <string name="detonator_total">总共:</string>
    <string name="detonator_used">已使用:</string>
    <string name="detonator_amount">%1$d条</string>
    <string name="no_delay_time">-- ms</string>
    <string name="map_position_init">经度:— 纬度:—</string>
    <string name="map_position">经度:%1$.4f 纬度:%2$.4f</string>
    <string name="map_last_position">(上次定位)</string>
    <string name="map_locate_success">(定位成功)</string>
    <string name="message_use_last_position">可按#键使用上次定位进入在线检测</string>
    <string name="map_latitude">纬度:</string>
    <string name="map_longitude">经度:</string>
    <string name="hint_input_name">请输入名称</string>
    <string name="hint_input_threshold">请输入门限值</string>
    <string name="hint_input_voltage">请输入电压值</string>
    <string name="hint_input_delay_time">请输入延期时间</string>
    <string name="hint_input_interval">请输入间隔时差</string>
    <string name="hint_input_select_hole">请输入选择的段号</string>
    <string name="hint_input_select_row">请输入选择的排号</string>
    <string name="wifi_available_list">可用网络列表</string>
    <string name="wifi_password_error">密码错误！</string>
    <string name="wifi_check_password">连接失败，请检查密码是否正确！</string>
    <string name="wifi_reconnect_fail">重新连接失败！</string>
    <string name="bt_pair_fail">匹配不成功！</string>
    <string name="bt_connected_device">已连接设备"%1$s"</string>
    <string name="bt_connect_timeout">连接超时！</string>
    <string name="bt_device_name">设备名称</string>
    <string name="bt_paired_device">已匹配的设备</string>
    <string name="bt_available_device">可用设备</string>
    <string name="update_found_new_version">发现新版本:%1$s</string>
    <string name="update_is_new_version">当前版本:%1$s是最新版本！</string>
    <string name="update_downloading">正在下载，请稍候！</string>
    <string name="update_download_fail">下载失败！</string>
    <string name="update_checking_version">正在检查版本，请稍候！</string>
    <string name="system_info_device_code">机器编号</string>
    <string name="system_info_login_user">登录用户</string>
    <string name="system_info_version">软件版本号</string>
    <string name="system_info_imei">IMEI号</string>
    <string name="system_info_iccid">ICCID号</string>
    <string name="system_info_number">移动号码</string>
    <string name="system_info_board_date">起爆板软件日期</string>
    <string name="system_info_board_version">起爆板版本号</string>
    <string name="unite_searching_devices">正在搜索联机设备</string>
    <string name="unite_device_not_found">没有搜索到设备！</string>
    <string name="button_start_detect">开始检测</string>
    <string name="button_get_status">获取状态</string>
    <string name="button_scan">扫 描</string>
    <string name="button_manual">手动输入</string>
    <string name="button_self_test">自 检</string>
    <string name="button_add_list">加入列表</string>
    <string name="button_new_list">新建列表</string>
    <string name="button_start_charge">开始充电</string>
    <string name="button_modify_voltage">修改电压</string>
    <string name="text_unlock">雷管未锁码</string>
    <string name="text_write_sn">写码</string>
    <string name="text_lock_detonator">锁码</string>
</resources>