<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:button="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCommonBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_tube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_tube_num"
            android:textColor="@android:color/black"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/tv_tube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ellipsize="middle"
            android:singleLine="true"
            android:textColor="@color/colorPopupTitleText"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/txt_delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/text_current_delay"
            android:textColor="@android:color/black"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/tv_delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPopupTitleText"
            android:textSize="@dimen/large_text_size" />

        <TextView
            android:id="@+id/tv_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/text_unlock"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/label_text_size" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp">

        <com.leon.detonator.component.MyButton
            android:id="@+id/btn_detect"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/button_start_detect"
            android:textSize="@dimen/button_text_size"
            button:keyCode="1" />

        <com.leon.detonator.component.MyButton
            android:id="@+id/btn_status"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/button_get_status"
            android:textSize="@dimen/button_text_size"
            button:keyCode="2" />
    </GridLayout>
</RelativeLayout>
